--- a/src/app/forma-paraponon/forma-paraponon.component.html
+++ b/src/app/forma-paraponon/forma-paraponon.component.html
@@ -10,7 +10,7 @@
 
 
 <body>
-<form (ngSubmit)="onSubmit()" class="ng-form" action="https://submit.jotform.com/submit/193466934399376/" method="post" name="form_193466934399376" id="193466934399376" accept-charset="utf-8">
+<form #myForm="ngForm" (ngSubmit)="onSubmit()" class="ng-form" action="https://submit.jotform.com/submit/193466934399376/" method="post" name="form_193466934399376" id="193466934399376" accept-charset="utf-8">
 	<div role="main" class="form-all">
 		<ul class="form-section page-section">
 			<li class="form-line" data-type="control_textbox" id="id_3_5">
@@ -37,8 +37,8 @@
 				<label class="form-label form-label-left form-label-auto" id="label_5"
 				for="input_5">Μέσο: </label>
 				<div ngbDropdown class="btn-group">
-					<select class="browser-default custom-select">
-						<option selected>--Επιλογή--</option>
+					<select #meso_model="ngModel" required [(ngModel)]="meso" name="name_id" class="browser-default custom-select">
+						<!-- <option selected>--Επιλογή--</option> -->
 						<optgroup label="ΣΤΑ.ΣΥ.">
 							<option>Γραμμη 1</option>
 							<option>Γραμμη 2</option>
@@ -55,6 +55,10 @@
 							<option>031</option>
 						</optgroup>
 					</select>
+					<div *ngIf="meso_model.invalid && (meso_model.dirty || meso_model.touched)"
+							class="alert alert-danger">
+						<div *ngIf="meso_model.errors.required">Απαιτείται η επιλογή ενός μέσου.</div>
+					</div>
 				</div>
 			</li>
 
@@ -62,8 +66,7 @@
 				<label class="form-label form-label-left form-label-auto" id="label_5"
 				for="input_5">Κατεύθυνση: </label>
 				<div ngbDropdown class="btn-group">
-					<select class="browser-default custom-select">
-						<option selected>--Επιλογή--</option>
+					<select  #direction_model="ngModel" [(ngModel)]="direction" name="direction_id" class="browser-default custom-select">
 						<option value="1">Απο αφετηρία</option>
 						<option value="2">Απο Τέρμα</option>
 					</select>
@@ -74,8 +77,7 @@
 				<label class="form-label form-label-left form-label-auto" id="label_5"
 				for="input_5"> Θεματική Ενότητα: </label>
 				<div ngbDropdown class="btn-group">
-					<select class="browser-default custom-select">
-						<option selected>--Επιλογή--</option>
+					<select #thematiki_model="ngModel" required [(ngModel)]="thematiki" name="thematiki_id" class="browser-default custom-select">
 						<option value="1">Σημεία έλλειψης εισιτηρίων</option>
 						<option value="2">Στάσεις-στέγαστρα</option>
 					</select>
@@ -98,15 +100,28 @@
 				</div><br>
 				
 				<div ngbDropdown class="btn-group">
-					<input type="text" id="input1" name="q4_complainantsName"
+					 <input #first_name_model="ngModel" required [(ngModel)]="first_name" type="text" id="input1" name="first_name_id"
+					 type="text" class="form-textbox" />
+					<div *ngIf="first_name_model.invalid && (first_name_model.dirty || first_name_model.touched)"
+							class="alert alert-danger">
+						<div *ngIf="first_name_model.errors.required">Απαιτείται το Όνομα.</div>
+					</div>
+
+					<input #last_name_model="ngModel" required [(ngModel)]="last_name" type="text" id="input2" name="last_name_id"
 					data-type="input-textbox" class="form-textbox" size="20" value=""
 					placeholder=" " data-component="textbox" aria-labelledby="label_4" />
-					<input type="text" id="input2" name="q4_complainantsName"
+					<div *ngIf="last_name_model.invalid && (last_name_model.dirty || last_name_model.touched)"
+							class="alert alert-danger">
+						<div *ngIf="last_name_model.errors.required">Απαιτείται το Επώνυμο.</div>
+					</div>
+
+					<input #email_model="ngModel" required [(ngModel)]="email" type="text" id="input3" name="email_id"
 					data-type="input-textbox" class="form-textbox" size="20" value=""
 					placeholder=" " data-component="textbox" aria-labelledby="label_4" />
-					<input type="text" id="input3" name="q4_complainantsName"
-					data-type="input-textbox" class="form-textbox" size="20" value=""
-					placeholder=" " data-component="textbox" aria-labelledby="label_4" />
+					<div *ngIf="email_model.invalid && (email_model.dirty || email_model.touched)"
+							class="alert alert-danger">
+						<div *ngIf="email_model.errors.required">Απαιτείται το Email.</div>
+			  		</div>
 				</div>
 
 				<div ngbDropdown class="btn-group">
@@ -119,7 +134,7 @@
 				</div>
 
 				<div ngbDropdown class="btn-group">
-					<input type="text" id="input1" name="q4_complainantsName"
+					<input [(ngModel)]="first_name" type="text" id="input1" name="first_name_id"
 					data-type="input-textbox" class="form-textbox" size="20" value=""
 					placeholder=" " data-component="textbox" aria-labelledby="label_4" />
 					<input type="text" id="input2" name="q4_complainantsName"
@@ -176,9 +191,9 @@
 			<li class="form-line" data-type="control_button" id="id_2">
 				<div id="cid_2" class="form-input-wide">
 					<div style="text-align:center" class="form-buttons-wrapper ">
-						<button id="input_2" type="submit" class="form-submit-button" data-component="button" data-content="">
+						<button class="btn btn-lg btn-primary btn-block" [disabled]="!myForm.valid" id="input_2" type="submit" style="width:120px;height:50px;">
 							Υποβολή
-						  </button>
+						</button>
 					</div>
 				</div>
 			</li>
