--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -1,6 +1,8 @@
 <div class="center">
     <div class="oasapic">
-        <img src="/assets/oasa1.png" routerLink='' width="70" height="70" title="Main Page">
+      <a href="">
+        <img src="/assets/oasa1.png"  width="70" height="70" title="Main Page">
+      </a>
     </div>
     <!-- asd -->
     <div class="oasabar">
@@ -39,8 +41,10 @@
       <nav class="navbar navbar-expand-lg navbar-light bg-light" style="border-radius: 25px;"><!--  navbar-dark bg-primary -->
         <!-- <button *ngIf='greek' type="button" class="btn btn-primary" routerLink=''>Κεντρική Σελίδα</button>
         <button *ngIf='!greek' type="button" class="btn btn-primary" routerLink=''>Main Page</button> -->
-        <button *ngIf='greek' type="button" class="btn btn-primary" routerLink=''><img src="/assets/house.svg" width="22" height="22"></button>
-        <button *ngIf='!greek' type="button" class="btn btn-primary" routerLink=''><img src="/assets/house.svg" width="22" height="22"></button>
+        <a href="">
+          <button *ngIf='greek' type="button" class="btn btn-primary"><img src="/assets/house.svg" width="22" height="22"></button>
+          <button *ngIf='!greek' type="button" class="btn btn-primary" routerLink=''><img src="/assets/house.svg" width="22" height="22"></button>
+        </a>
         <div class="divider"></div>
 
         
