--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -105,8 +105,9 @@
             <div ngbDropdownMenu class="dropdown-menu">
               <a class="dropdown-item" href="shmeia-ekdosis/odikes">Σημεία έκδοσης στις Οδικές</a>
               <a class="dropdown-item" href="shmeia-ekdosis/sta8eres">Σημεία έκδοσης στις Σταθερές</a>
-              <a class="dropdown-item" href="times\eisitiria">Τιμές εισιτηρίων</a>
-              <a class="dropdown-item" href="times\kartes">Τιμές χρονικών προϊόντων</a>
+              <a class="dropdown-item" href="">Τιμές εισιτηρίων</a>
+              <a class="dropdown-item" href="">Τιμές χρονικών προϊόντων</a>
+              <a class="dropdown-item" href="agora">Αγορα Εισιτηρίων </a>
             </div>
           </div>
 
@@ -115,11 +116,12 @@
               Tickets - Cards
             </button>
             <div ngbDropdownMenu class="dropdown-menu">
-              <a class="dropdown-item" href="">Γραμμές οδικών συγκοινωνιών(λεωφορεία)</a>
-              <a class="dropdown-item" href="">Γραμμές σταθερών συγκοινωνιών(μετρό)</a>
-              <a class="dropdown-item" href="">Ωράριο λειτοθργίας Νυχτερινών - 24ώρων μέσων</a>
-              <a class="dropdown-item" href="">Πληροφόρηση σε πραγματικό χρόνο</a>
-              <a class="dropdown-item" href="">Σταθμοί μετεπιβίβασης</a>
+              <a class="dropdown-item" href="">eng.Γραμμές οδικών συγκοινωνιών(λεωφορεία)</a>
+              <a class="dropdown-item" href="">eng.Γραμμές σταθερών συγκοινωνιών(μετρό)</a>
+              <a class="dropdown-item" href="">eng.Ωράριο λειτοθργίας Νυχτερινών - 24ώρων μέσων</a>
+              <a class="dropdown-item" href="">eng.Πληροφόρηση σε πραγματικό χρόνο</a>
+              <a class="dropdown-item" href="">eng.Σταθμοί μετεπιβίβασης</a>
+              <a class="dropdown-item" href="agora">Buy tickets</a>
             </div>
           </div>
 
