mainpage and neo comp

--- a/src/app/global/global.component.html
+++ b/src/app/global/global.component.html
@@ -75,8 +75,8 @@
               Μετακίνηση
             </button>
             <div ngbDropdownMenu class="dropdown-menu">
-              <a class="dropdown-item" href="">Γραμμές οδικών συγκοινωνιών (λεωφορεία)</a>
-              <a class="dropdown-item" href="">Γραμμές σταθερών συγκοινωνιών (μετρό)</a>
+              <a class="dropdown-item" href="plhrofories/odikes">Γραμμές οδικών συγκοινωνιών (λεωφορεία)</a>
+              <a class="dropdown-item" href="plhrofories/sta8eres">Γραμμές σταθερών συγκοινωνιών (μετρό)</a>
               <a class="dropdown-item" href="nuxterina">Ωράριο λειτοθργίας Νυχτερινών - 24ωρων μέσων</a>
               <a class="dropdown-item" href="">Πληροφόρηση σε πραγματικό χρόνο</a>
               <a class="dropdown-item" href="">Σταθμοί μετεπιβίβασης</a>
