--- a/src/app/nuxterina/nuxterina.component.html
+++ b/src/app/nuxterina/nuxterina.component.html
@@ -8,11 +8,11 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script> -->
 </head>
+<br>
 
 <body>
-
 <div >
-  <h2>Γραμμές 24ωρης λειτουργίας</h2>
+  <h2 style="padding: 25px;">Γραμμές 24ωρης λειτουργίας</h2>
   <table class="table table-hover">
     <thead>
 			<tr>
