--- a/src/app/forma-paraponon/forma-paraponon.component.css
+++ b/src/app/forma-paraponon/forma-paraponon.component.css
@@ -22,6 +22,8 @@ body, html{
     margin:0;
     padding:0;
     background:#fff;
+    height: 1240px;
+    border-radius: 25px;
 }
 
 .form-all{
@@ -96,7 +98,7 @@ width: 100%;
 }
 
 .supernova .form-all, .form-all {
-    background-color: ;
+    /* background-color: ; */
     border: 1px solid transparent;
 }
 .supernova {
