--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -10,7 +10,7 @@
   
     <br>
     <ul>
-      <li><a routerLink="/signup">Όχι μέλος; Είσοδος</a></li>
+      <li><a routerLink="/signup">Όχι μέλος; Εγγραφή</a></li>
       <li><a routerLink="">Αρχική σελίδα</a></li>
     </ul>
   </form>
